# rust-data-structures

./: Cargo.toml
ds-list/: Cargo.toml
ds-list/src/: lib.rs
ds-list/tests/: doubly_linked_list_tests.rs  singly_linked_list_tests.rs
forward-list/: Cargo.toml
forward-list/src/: lib.rs
lists/: Cargo.toml
lists/src/: lib.rs
src/: main.rs
