workspace = { members = ["lists"] }
[package]
name = "rust-data-structures"
version = "0.1.0"
edition = "2021"
description = "A project for placing my data structures implementations made in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lists = { path = "./lists", version = "0.1.0" }
