[package]
name = "ds-list"
version = "2.1.0"
edition = "2021"
description = "A implementation of a singly linked list and a doubly linked list (with sentinel node)."
license = "MIT"
authors = ["Juan Diego <juan.castro.p@utec.edu.pe>"]
repository = "https://github.com/ByJuanDiego/rust-data-structures/tree/master/ds-list"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
